# SimpleFunctionSymbolOperation

./: CMakeLists.txt  README.txt
include/: linus_unknow_linux.h  temp.h  temp_macro.h  temp_somethings.h
src/: differentiate.c  integration.c  lexical_analysis.c  lexicon_analysis.c  main(gui).c  main(to_be_delete).c  main.c  necessary_part.c  screen_print.c  simplification.c  string_processing.c
